<resources>
    <string name="app_name" translatable="false">FancyHangman</string>
    <string name="play_match">Play Match</string>
    <string name="settings">Settings</string>
    <string name="exit_game">Exit Game</string>
    <string name="guesses_left_text">Guesses left: </string>
    <string name="letters_guessed_text">Letters guessed: </string>
    <string name="already_guessed">You have already guessed that letter!</string>
    <string name="letter_not_exist">That letter does not exist!</string>
    <string name="you_win">YOU WIN!</string>
    <string name="you_lose">YOU LOSE!</string>
    <string name="tries_left">Tries Left: </string>
    <string name="letters_guessed">Letters guessed: </string>
    <string name="the_word_was">The word was: </string>
    <string name="number_of_guesses">Number of guesses: </string>
    <string name="summary">Summary:</string>
    <string name="play_again">Play Again</string>
    <string name="programmed_and_designed_by_marcus_hellkvist">Programmed and designed by Marcus Hellkvist</string>
    <string name="language">Language</string>
    <string name="apply">Apply</string>
    <string name="theme">Theme</string>
    <string name="changes">Changes successfully made</string>

    <string-array name="language_list">
        <item>English</item>
        <item>Swedish</item>
    </string-array>

    <string-array name="theme_list">
        <item>Cartoon</item>
        <item>8 Bit</item>
    </string-array>

    <string-array name="words">
        <item>BOAT</item>
        <item>TOYS</item>
        <item>STAR</item>
        <item>CLOUD</item>
        <item>TOILET</item>
        <item>CAR</item>
        <item>SALESMAN</item>
        <item>JANITOR</item>
        <item>BATHROOM</item>
        <item>COMPUTER</item>
    </string-array>

</resources>
