<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".EndActivity">

    <TextView
        android:id="@+id/tv_end_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/bebasneue_regular"
        android:textColor="@color/colorWhite"
        android:textSize="58sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_view_trophy"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_end_text"
        app:lottie_rawRes="@raw/trophy"
        app:lottie_autoPlay="false"
        app:lottie_loop="false"/>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_view_confetti_falling"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_end_text"
        app:lottie_rawRes="@raw/confetti_falling"
        app:lottie_autoPlay="false"
        app:lottie_loop="false"/>

    <TextView
        android:id="@+id/tvSummary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/opensans_regular"
        android:text="@string/summary"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/animation_view_trophy" />

    <TextView
        android:id="@+id/tv_correct_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/opensans_light"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSummary" />

    <TextView
        android:id="@+id/tv_amount_of_guesses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/opensans_light"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_correct_word" />

    <Button
        android:id="@+id/btn_menu_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/my_yellow_button"
        android:drawableStart="@drawable/btn_icon_people"
        android:fontFamily="@font/bebasneue_regular"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:text="@string/play_again"
        android:textColor="@color/colorWhite"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_menu_exit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_menu_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="@drawable/my_red_button"
        android:drawableStart="@drawable/btn_icon_exit"
        android:fontFamily="@font/bebasneue_regular"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:text="@string/exit_game"
        android:textColor="@color/colorWhite"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>